--- a/Frontend/src/Components/Landing/styles.css
+++ b/Frontend/src/Components/Landing/styles.css
@@ -29,3 +29,10 @@
   height: 100%;
   object-fit: cover;
 }
+Button{
+  border: 1px solid;
+}
+.offer:hover{
+background-color: white;
+color:black
+}
